--- a/FodboldApp/FodboldApp/FodboldApp/MainPage.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/MainPage.xaml
@@ -12,14 +12,9 @@
                 HorizontalOptions="CenterAndExpand" />
 
             <ListView x:Name="clubList" BackgroundColor="#007741" >
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <TextCell TextColor="Black"></TextCell>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
             </ListView>
 
-            <Button Text="Næste"
+            <Button x:Name="continueBtn" Text="Næste"
                 HorizontalOptions="Center"
                 VerticalOptions="CenterAndExpand" />
         </StackLayout>
