Indhold af liste er blevet lavet i en observablecolection for at kunne binde til listen.

--- a/FodboldApp/FodboldApp/FodboldApp/MainPage.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/MainPage.xaml
@@ -14,7 +14,7 @@
             <ListView x:Name="clubList" BackgroundColor="#007741" >
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <TextCell TextColor="Black"></TextCell>
+                        <TextCell Text="{Binding ClubName}" TextColor="Black" />
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
