--- a/FodboldApp/FodboldApp/FodboldApp/MainPage.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/MainPage.xaml
@@ -12,6 +12,11 @@
                 HorizontalOptions="CenterAndExpand" />
 
             <ListView x:Name="clubList" BackgroundColor="#007741" >
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <TextCell Text="{Binding ClubName}" TextColor="Black" />
+                    </DataTemplate>
+                </ListView.ItemTemplate>
             </ListView>
 
             <Button x:Name="continueBtn" Text="Næste"
