--- a/FodboldApp/FodboldApp/FodboldApp/Header.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/Header.xaml
@@ -1,11 +1,8 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="FodboldApp.Header">
-    <ContentPage.ToolbarItems>
-        <ToolbarItem Name="MenuItem1" Order="Primary" Icon="Microsoft.png" Text="Item 1" Priority="0" />
-        <ToolbarItem Name="MenuItem2" Order="Primary" Icon="Xamarin.png" Text="Item 2" Priority="1" />
-    </ContentPage.ToolbarItems>
+             x:Class="FodboldApp.Header"
+             ControlTemplate="{StaticResource MainPageTemplate}">
     <ContentPage.Content>
         <StackLayout>
           <Label Text="Hello Xamarin.Forms!" />
