--- a/FodboldApp/FodboldApp/FodboldApp/Header.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/Header.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="FodboldApp.Header"
+             xmlns:controls="clr-namespace:Plugin.CrossPlatformTintedImage.Abstractions;assembly=Plugin.CrossPlatformTintedImage.Abstractions"
              BackgroundColor="#F0F0F0">
    
     <Grid ColumnSpacing="0" RowSpacing="0" >
@@ -23,35 +24,35 @@
             </Grid.ColumnDefinitions>
 
             <StackLayout Spacing="0" Grid.Column="0" BackgroundColor="White">
-                <Image HeightRequest="30" Source="nyheder.png"/>
+                <controls:TintedImage x:Name="tintedImage_Nyheder" Source="nyheder.png"  HeightRequest="30"/>
                 <StackLayout.GestureRecognizers>
                     <TapGestureRecognizer Tapped="Nyheder_Tapped"/>
                 </StackLayout.GestureRecognizers>
             </StackLayout>
 
             <StackLayout Spacing="0" Grid.Column="1" BackgroundColor="White">
-                <Image HeightRequest="30" Source="aaretsspiller.png"/>
+                <controls:TintedImage x:Name="tintedImage_Aaretsspiller" Source="aaretsspiller.png"  HeightRequest="30"/>
                 <StackLayout.GestureRecognizers>
                     <TapGestureRecognizer Tapped="Aaretsspiller_Tapped"/>
                 </StackLayout.GestureRecognizers>
             </StackLayout>
 
             <StackLayout Spacing="0" Grid.Column="2" BackgroundColor="White">
-                <Image HeightRequest="30" Source="turnering.png"/>
+                <controls:TintedImage x:Name="tintedImage_Turnering" Source="turnering.png"  HeightRequest="30"/>
                 <StackLayout.GestureRecognizers>
                     <TapGestureRecognizer Tapped="Turnering_Tapped"/>
                 </StackLayout.GestureRecognizers>
             </StackLayout>
 
             <StackLayout Spacing="0" Grid.Column="3" BackgroundColor="White">
-                <Image HeightRequest="30" Source="statistik.png"/>
+                <controls:TintedImage x:Name="tintedImage_Statistik" Source="statistik.png"  HeightRequest="30"/>
                 <StackLayout.GestureRecognizers>
                     <TapGestureRecognizer Tapped="Statistik_Tapped"/>
                 </StackLayout.GestureRecognizers>
             </StackLayout>
 
             <StackLayout Spacing="0" Grid.Column="4" BackgroundColor="White">
-                <Image HeightRequest="30" Source="burgermenu.png"/>
+                <controls:TintedImage x:Name="tintedImage_Burgermenu" Source="burgermenu.png"  HeightRequest="30"/>
                 <StackLayout.GestureRecognizers>
                     <TapGestureRecognizer Tapped="Burgermenu_Tapped"/>
                 </StackLayout.GestureRecognizers>
