--- a/FodboldApp/FodboldApp/FodboldApp/Pages/Tournament.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/Pages/Tournament.xaml
@@ -3,10 +3,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="FodboldApp.Tournament">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+        <StackLayout x:Name="pageLayout">
+            <Label Text="RESULTATER"
+                   HorizontalOptions="CenterAndExpand"
+                   FontSize="Large"
+                   TextColor="{StaticResource textColor}"
+                   BackgroundColor="#f0f0f0"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
