1.Holdet page is partially implemented - Missing player images in shape of an ellipse, rest of the team and navigation for each player. ScrollView in App.xaml is fixed.

--- a/FodboldApp/FodboldApp/FodboldApp/App.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/App.xaml
@@ -54,9 +54,9 @@
                     <!-- End Header -->
 
                     <!-- Begin Content -->
-                    <ScrollView Grid.Column="0" Grid.Row="1">
+                    <ContentView Grid.Column="0" Grid.Row="1">
                         <ContentPresenter VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" />
-                    </ScrollView>
+                    </ContentView>
                     <!-- End Content -->
         </Grid>
         </ControlTemplate>
