--- a/FodboldApp/FodboldApp/FodboldApp/Pages/Tournament.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/Pages/Tournament.xaml
@@ -3,12 +3,15 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="FodboldApp.Tournament">
     <ContentPage.Content>
-        <StackLayout x:Name="pageLayout">
-            <Label Text="RESULTATER"
+        <ScrollView Orientation="Vertical"
+                        VerticalOptions="FillAndExpand">
+            <StackLayout x:Name="pageLayout">
+                <Label Text="RESULTATER"
                    HorizontalOptions="CenterAndExpand"
                    FontSize="Large"
                    TextColor="{StaticResource textColor}"
                    BackgroundColor="#f0f0f0"/>
-        </StackLayout>
+            </StackLayout>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
